# product_space

./: .env.example  .gitignore  DOC.md  README.md  SETUP-GUIDE.md  SETUP.md  check_db.py  debug_ticket_processing.py  debug_workflow.py  final_demo_workflow.py  main.py  pyproject.toml  requirements.txt  test_parsing.py  test_parsing_final.py  test_sentiment_direct.py  test_sentiment_extraction.py  test_slack.py  test_slack_workflow.py  test_workflow.py
agent/: alert_manager.py  integration_coordinator.py  orchestrator.py  response_generator.py  sentiment_analyst.py
app/: main.py
app/agents/: __init__.py  alert_manager.py  response_generator.py  sentiment_analyzer.py  trend_analyzer.py
app/api/v1/: api.py
app/api/v1/endpoints/: alerts.py  health.py  sentiment.py  tickets.py  trends.py
app/core/: config.py  database.py  logging.py
app/schemas/: __init__.py  alert.py  sentiment.py  ticket.py  trend.py
app/services/: agent_manager.py  alert_service.py  slack_service.py  ticket_service.py
frontend/: index.html
scripts/: demo_workflow.py  setup.py  test_api.py
tools/: confidence_scorer.py  database_manager.py  escalation_router.py  response_creator.py  risk_assessor.py  sentiment_analyzer.py  slack_notifier.py  task_router.py  tone_matcher.py  webhook_handler.py
workflows/: agent_crew.py
